--- a/Server/plugin_config_files/Luckperms/yaml-storage/groups/new.yml
+++ b/Server/plugin_config_files/Luckperms/yaml-storage/groups/new.yml
@@ -1,7 +1,7 @@
 name: new
 permissions:
 - bukkit.broadcast.*:
-    value: false
+    value: true
 - essentials.back.*
 - essentials.build.break.*:
     value: false
